--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
+    "build": "npm install",
     "server": "node index.js"
   },
   "keywords": [],
