add start script

--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,8 @@ GITHUB_PASSWORD=onse_site_16
 
 
 PORT=3000
-MONGODB_URI=mongodb+srv://onse-site:onse_site_16@cluster0.cjle48h.mongodb.net/ONSE_DB?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URI=mongodb+srv://onse-site:onse_site_16@cluster0.cjle48h.mongodb.net/ONSE_DB?retryWrites=true&w=majority&appName=Cluster0
 
+BACKEND_URL=http://localhost:3000
 
 JWT_SECRET=f5cfe171-c150-4c75-954e-a6cffee571f4-3f724840-57b1-40b1-8d0e-43b8e1d4cc58
