test github actions

--- a/server/.env
+++ b/server/.env
@@ -10,6 +10,7 @@ GITHUB_PASSWORD=onse_site_16
 
 PORT=3000
 DATABASE_URI=mongodb+srv://onse-site:onse_site_16@cluster0.cjle48h.mongodb.net/ONSE_DB?retryWrites=true&w=majority&appName=Cluster0
+LOCAL_DATABASE_URI=mongodb://localhost:27017/ONSE_DB
 
 BACKEND_URL=http://localhost:3000
 
