--- a/server/.env
+++ b/server/.env
@@ -13,5 +13,6 @@ DATABASE_URI=mongodb+srv://onse-site:onse_site_16@cluster0.cjle48h.mongodb.net/O
 LOCAL_DATABASE_URI=mongodb://localhost:27017/ONSE_DB
 
 BACKEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3000
 
 JWT_SECRET=f5cfe171-c150-4c75-954e-a6cffee571f4-3f724840-57b1-40b1-8d0e-43b8e1d4cc58
