--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,7 @@ GITHUB_PASSWORD=onse_site_16
 
 
 PORT=3000
-DATABASE_URI=
+DATABASE_URI=mongodb://localhost:27017/ONSE_DB
 LOCAL_DATABASE_URI=mongodb://localhost:27017/ONSE_DB
 
 BACKEND_URL=https://onse.abdeldjalile.me
